fix: hide member add if not admin
